syntax = "proto3";

package clienttemplate.user.v1;

option csharp_namespace = "Clienttemplate.User.V1";
option go_package = "clienttemplate/user/v1;userv1";
option java_multiple_files = true;
option java_outer_classname = "UserApiProto";
option java_package = "com.clienttemplate.user.v1";
option objc_class_prefix = "CUX";
option php_namespace = "Clienttemplate\\User\\V1";

import "clienttemplate/user/v1/user.proto";

// UserAPI сервис получения информации о пользователях.
service UserAPI {
  // GetUser получение пользователя по ID.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}
